https_with_letsencrypt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: testing
spec:
  selector:
    app: nginx
  ports:
  - protocol: "TCP"
    port: 80
