https_with_letsencrypt/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prod.tricksvibe.tk
    secretName: prod-crt-tls
  rules:
  - host: prod.tricksvibe.tk
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - backend:
          serviceName: nginx
          servicePort: 80
